2005-04-08  Angus Leeming  <leeming@lyx.org>

	* FormAboutlyx.C (build): ensure that the CREDITS data fits on the
	browser.

2005-03-02  Angus Leeming  <leeming@lyx.org>

	* forms/form_filedialog.fd: do Lars' dirty work for him and remove
	the unused FileInfo widget.

2005-02-18  Michael Schmitt  <michael.schmitt@teststep>

	* FormRef.C:
	* forms/form_ref.fd: substitute "reference" by "label"
	in text messages

2005-02-01  Angus Leeming  <leeming@lyx.org>

	* FormPreferences.C (feedback): use LyXRC::getDescription for
	RC_PATH_PREFIX.

2005-02-01  Angus Leeming  <leeming@lyx.org>

	* FormFiledialog.C (Reread): use fs::exists() before
	calling fs::is_directory().

2005-01-31  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* xforms_helpers.C: rewrite to use boost.filesystem

	* FormFiledialog.[Ch]: simplify and rewrite to use boost.filesystem,
	remove lot of now unused code.

2005-01-27  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Several files: use convert<> instead of atoi,strToXXX and friends

2005-01-20  Angus Leeming  <leeming@lyx.org>

	* FormPreferences.C: change the tooltip messages to reflect the
	changed meaning of the $$s placeholder.

2005-01-15  Angus Leeming  <leeming@lyx.org>

	* FormPreferences.C, forms/form_preferences.fd: add an interface
	to modify LyXRC::path_prefix.

2005-01-13  Angus Leeming  <leeming@lyx.org>

	* FormPreferences.C: code to get/set the value
	of the Cygwin check box. Compiled only under Cygwin.

	* forms/form_preferences.fd: add a Cygwin paths check box to the
	Outputs->Misc tab.

2005-01-13  Angus Leeming  <leeming@lyx.org>

	* FormPreferences.C: use getString, a safe wrapper around fl_get_input.

2005-01-10  Angus Leeming  <leeming@lyx.org>

	* FormFiledialog.C:
	* FormPreferences.C:
	* lyx_gui.C: use support/package.h to provide the paths to the
	various directories used by LyX.

2005-01-06  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* xforms_helpers.C:
	* XFormsMenubar.C:
	* FormWrap.C:
	* FormSpellchecker.C:
	* FormPrint.C: