@@ -15,13 +15,13 @@
 #include "forms/form_filedialog.h"
 
 #include "forms_gettext.h"
+#include "globbing.h"
 #include "xforms_helpers.h"
 
 #include "frontends/Dialogs.h"
 
 #include "support/filefilterlist.h"
 #include "support/filetools.h"
-#include "support/globbing.h"
 #include "support/lstrings.h"
 #include "support/lyxlib.h"
 #include "support/package.h"
