@@ -44,8 +44,6 @@ libsupport_la_SOURCES = \
 	fs_extras.C \
 	fs_extras.h \
 	getcwd.C \
-	globbing.C \
-	globbing.h \
 	$(COMPRESSION) kill.C \
 	limited_stack.h \
 	lstrings.C \
