@@ -1,3 +1,9 @@
+2005-04-25  Angus Leeming  <leeming@lyx.org>
+
+	* globbing.[Ch]: moved here from the support directory.
+
+	* Makefile.am: associated change.
+
 2005-04-08  Angus Leeming  <leeming@lyx.org>
 
 	* FormAboutlyx.C (build): ensure that the CREDITS data fits on the
